--- a/style.css
+++ b/style.css
@@ -83,9 +83,6 @@ header{
     left: 0;
     top: 0;
     background-color: #446D8C;
-
-
-
     background: -webkit-linear-gradient(#446D8C, #F4F4F4);
     background: -o-linear-gradient(#446D8C, #F4F4F4);
     background: linear-gradient(#446D8C, #F4F4F4);
@@ -121,7 +118,7 @@ header{
 
     display: block;
     text-decoration: none;
-    color: rgb(210, 210 ,210);
+    color: white;
 }
 
 #sidenav li:hover {
