--- a/regulations/reguPostSales/style.css
+++ b/regulations/reguPostSales/style.css
@@ -111,7 +111,6 @@ header{
     margin: 0 auto;
     padding: 15px 15px 0 15px;
 
-
 }
 
 #sidenav a {
@@ -119,6 +118,7 @@ header{
     display: block;
     text-decoration: none;
     color: white;
+
 }
 
 #sidenav li:hover {
@@ -126,6 +126,7 @@ header{
     background-color: #005A87;
     cursor: pointer;
 }
+
 
 #sidenav ul li img {
     height: 28px;
@@ -215,7 +216,7 @@ header nav a {
 
    text-align: center;
    magin: 0 auto;
-   left: 0;
+   left: -20px;
    top: 0;
    height: 85px;
 
@@ -297,200 +298,31 @@ body {
 
 }
 
-/*----------news slider----------*/
-
-.news {
-
-    width: 100%;
-    text-align: center;
-    height: 450px;
-    position: relative;
-}
-
-.slider {
-
-    overflow: hidden;
-    top: 0;
-
-}
-
-.active-slide img {
-
-    width: 1040px;
-    padding: 0 ;
-    z-index: 0;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    -ms-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s;
-
-}
-
-.slide img {
-
-    display: none;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    -ms-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s;
-
-}
-
-.slide {
-
-  display: none;
-
-}
-
-.dot-nav {
-
-    height: 20%;
-    overflow: hidden;
-    z-index: 10;
-    position: relative;
-    bottom: 8vh;
-}
-
-.dot-nav li {
-
-    type: none;
+table {
+    margin-top: 68px;
     display: inline-block;
-    padding: 0;
-
-}
-
-.dot-nav li img{
-
-    text-align: center;
-    padding: 0 10px 0 0;
-    width: 30%;
-
-}
-
-.dot:hover {
-
-    cursor: pointer;
-
-}
-
-
-/*--------products slider--------*/
-
-.products {
-  position: relative;
-  text-align: center;
-  margin: 0 auto;
-  padding: 0;
-  }
-
-.banner h2 {
-  font-family: "微軟正黑體";
-  font-size: 36px;
-  color: gray;
-  font-weight: 300;
-
-}
-
-.banner h2 img {
-  vertical-align: middle;
-  display: inline-block;
-  padding: 0 10px;
-}
-
-#pdSlider {
-  position: relative;
-  overflow: hidden;
-  margin: 0 auto;
-  padding: 0;
-}
-
-#pdSlider ul.pd {
-  position: absolute;
-  z-index: 5;
-  margin: 0 auto;
-  padding: 0;
-  list-style: none;
-  left: 20px;
-  top: 0;
-}
-
-#pdSlider ul.pd li {
-    position: relative;
-    display: inline-block;
-    margin: 0 38px;
-    width: 260px;
-    height: 500px;
-    line-height: 600px;
-    left: 0;
-}
-
-#pdTag {
-  position: relative;
-  overflow: hidden;
-}
-
-#pdSlider ul.tag {
-  left: 20px;
-  margin: 0 auto;
-  padding: 0;
-  z-index: 10;
-  position: absolute;
-  top: 240px;
-  list-style: none;
-  text-align: center;
-}
-
-#pdSlider ul.tag li {
-    visibility: hidden;
-    opacity: 0;
-    background-color: rgba(33, 33, 33, .8);
-    font-family: "微軟正黑體";
-    font-size: 14px;
-    color: white;
-    position: relative;
-    display: inline-block;
-    margin: 60px 38px;
-    padding: 5px 10px ;
-    height: 55px;
-    line-height: 25px;
-    vertical-align: middle;
-    width: 240px;
+    width: 1100px;
     text-align: left;
-
+    font-size: 24px;
+    font-weight: 600;
+    border: 4px solid rgb(195, 0, 97);
+    border-spacing: 0;
 }
 
-.pdLeft {
-  position: absolute;
-  left: 0px;
-  z-index: 20;
-  padding-top: 150px;
+table td {
+    padding: 10px 17px;
 }
 
-.pdRight {
-  position: absolute;
-  right: 0px;
-  z-index: 20;
-  padding-top: 150px;
+pre {
+    font-family: "微軟正黑體";
 }
 
-#pdLeft, #pdRight {
-
-  width: 45px;
-  cursor: pointer;
-
+p {
+  display: inline;
 }
 
-#pd1, #pd2, #pd3, #pd4, #pd5{
-
-    margin: 0 auto;
-    width: 260px;
-
-}
-
-#pd1:hover , #pd2:hover , #pd3:hover, #pd4:hover, #pd5:hover {
-
-    box-shadow: 0px 0px 60px rgb(93, 137, 137);
+#mark {
+    font-size: 26px;
+    color: #C30027;
 
 }
