--- a/regulations/reguAbout/style.css
+++ b/regulations/reguAbout/style.css
@@ -298,8 +298,37 @@ body {
 
 }
 
-#content {
-    width: 600px;
-    margin: 25px 15px;
-    
+#title {
+    width: 250px;
+    margin: 0 0 35px 0;
+}
+
+#description {
+    border: 6px solid rgb(90, 135, 0);
+    text-align: left;
+    display: inline-block;
+    width: 1000px;
+    box-shadow: inset 0 0 25px 6px  rgba(0, 0, 0, .2), 0 0 25px 6px rgba(0, 0, 0, .2);
+}
+
+#description td{
+    vertical-align: top;
+    padding: 30px 50px;
+}
+
+#description p{
+    display: inline;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+#subtitle {
+    width: 240px;
+    margin: 20px -20px;
+}
+
+#separation {
+    width: 920px;
+    display: block;
+    margin: 30px 0 0 -10px;
 }
