--- a/regulations/reguAbout/style.css
+++ b/regulations/reguAbout/style.css
@@ -307,24 +307,41 @@ body {
     border: 6px solid rgb(90, 135, 0);
     text-align: left;
     display: inline-block;
-    width: 1000px;
+    width: 1050px;
     box-shadow: inset 0 0 25px 6px  rgba(0, 0, 0, .2), 0 0 25px 6px rgba(0, 0, 0, .2);
-}
-
-#description td{
-    vertical-align: top;
-    padding: 30px 50px;
-}
-
-#description p{
-    display: inline;
     font-weight: 600;
     font-size: 20px;
 }
 
-#subtitle {
-    width: 240px;
-    margin: 20px -20px;
+#description p {
+    margin: 0;
+}
+
+#description td{
+    vertical-align: top;
+    padding: 60px 35px 60px 55px;
+}
+
+
+#subTitle {
+    font-size: 26px;
+    color: #5A8700;
+    font-family: "微軟正黑體";
+    font-weight: 600;
+    text-shadow: 1px 0px white, 0px 1px white, -1px 0px white, 0px -1px white,
+    1px 1px white, -1px 1px white, 1px -1px white, -1px -1px white, 0 0 10px black;
+    margin: 10px 0 -5px  -15px;
+}
+
+#mark {
+    font-size: 26px;
+    display: inline;
+    color: #C30027;
+    font-family: "微軟正黑體";
+    font-weight: 600;
+    text-shadow: 1px 0px white, 0px 1px white, -1px 0px white, 0px -1px white,
+    1px 1px white, -1px 1px white, 1px -1px white, -1px -1px white, 0 0 10px black;
+
 }
 
 #separation {
