--- a/regulations/reguPurchase/style.css
+++ b/regulations/reguPurchase/style.css
@@ -302,7 +302,7 @@ body {
     position: absolute;
     z-index: 5;
     text-align: left;
-    margin-top: -26px;
+    top: 230px;
     margin-left: 135px;
     margin-bottom: 0;
     width: 1120px;
