--- a/regulations/reguPurchase/agencyManual/style.css
+++ b/regulations/reguPurchase/agencyManual/style.css
@@ -298,54 +298,94 @@ body {
 
 }
 
-#title {
-    width: 250px;
-    margin: 0 0 35px 0;
+#titleManual {
+    margin: 0;
+    font-size: 36px;
+    color: #C30027;
+    text-shadow: 1px 0px white, 0px 1px white, -1px 0px white, 0px -1px white,
+    1px 1px white, -1px 1px white, 1px -1px white, -1px -1px white, 0 0 12px black;
+
+}
+
+.content h2 {
+    line-height: 5px;
+}
+
+.content h4 {
+    line-height: 20px;
+    font-size: 18px;
+    color: #C30027;
+}
+
+
+#goBack {
+    position: absolute;
+    display: block;
+    top: 255px;
+    width: 25px;
+    margin-left:52px;
+}
+
+#backText {
+    font-family: "微軟正黑體";
+    font-size: 22px;
+    font-weight: 600;
+    color: #5A0087;
+    position: absolute;
+    display: block;
+    top: 228px;
+    margin-left:87px;
+
+}
+
+.content table {
+    display: inline-block;
+    border: 2px solid #00527E;
+    border-collapse: collapse;
+    width: 1000px;
+    margin: 60px auto;
+
+
+}
+
+.content table td {
+    border: 3px solid #00527E;
+}
+
+#caption {
+    text-align: left;
+    vertical-align: middle;
+    font-family: "微軟正黑體";
+    font-size: 24px;
+    font-weight: 600;
+    color: #5A0087;
+    padding: 10px 27px;
+    margin: 0;
+    background-color: #b2cddb;
+
+}
+
+#subtitle {
+    text-align: center;
+    vertical-align: middle;
+    font-family: "微軟正黑體";
+    font-size: 22px;
+    font-weight: 600;
+    color: #005A87;
+    width: 260px;
+    background-color: #e5eef3
 }
 
 #description {
-    border: 6px solid rgb(90, 135, 0);
     text-align: left;
-    display: inline-block;
-    width: 1050px;
-    box-shadow: inset 0 0 25px 6px  rgba(0, 0, 0, .2), 0 0 25px 6px rgba(0, 0, 0, .2);
-    font-weight: 600;
-    font-size: 20px;
-}
-
-#description p {
-    margin: 0;
-}
-
-#description td{
-    vertical-align: top;
-    padding: 60px 35px 60px 55px;
-}
-
-
-#subTitle {
-    font-size: 26px;
-    color: #5A8700;
+    vertical-align: middle;
     font-family: "微軟正黑體";
-    font-weight: 600;
-    text-shadow: 1px 0px white, 0px 1px white, -1px 0px white, 0px -1px white,
-    1px 1px white, -1px 1px white, 1px -1px white, -1px -1px white, 0 0 10px black;
-    margin: 10px 0 -5px  -15px;
+    font-size: 22px;
+    color: #005A87;
+    padding: 20px 40px;
+    background-color: #e5eef3
 }
 
 #mark {
-    font-size: 26px;
-    display: inline;
     color: #C30027;
-    font-family: "微軟正黑體";
-    font-weight: 600;
-    text-shadow: 1px 0px white, 0px 1px white, -1px 0px white, 0px -1px white,
-    1px 1px white, -1px 1px white, 1px -1px white, -1px -1px white, 0 0 10px black;
-
-}
-
-#separation {
-    width: 920px;
-    display: block;
-    margin: 30px 0 0 -10px;
 }
