--- a/regulations/reguPurchase/style.css
+++ b/regulations/reguPurchase/style.css
@@ -216,7 +216,7 @@ header nav a {
 
    text-align: center;
    magin: 0 auto;
-   left: -20px;
+   left: 0px;
    top: 0;
    height: 85px;
 
@@ -302,7 +302,7 @@ body {
     position: absolute;
     z-index: 5;
     text-align: left;
-    margin-top: -26px;
+    top: 230px;
     margin-left: 135px;
     margin-bottom: 0;
     width: 1120px;
@@ -348,7 +348,7 @@ body {
     text-decoration: none;
 }
 
-#arrow1, #arrow2, #arrow3 {
+#arrow1, #arrow2, #arrow3, #arrowForm{
     display: inline;
     color: #005A87;
 }
@@ -367,7 +367,7 @@ body {
     font-family: "微軟正黑體";
     font-size: 18px;
     font-weight: 600;
-    color: #C30027;
+    color: black;
     position: absolute;
     margin-top: -35px;
     margin-left: 340px;
