--- a/merchandise/style.css
+++ b/merchandise/style.css
@@ -290,89 +290,259 @@ body {
 }
 
 .content {
-
-    text-align: center;
-    padding: 170px 0 0 0;
+    text-align: left;
+    padding: 230px 0 0 0;
     margin: 0 auto;
     font-family: "微軟正黑體";
-
 }
 
-#titleNotice {
-    margin: 0;
-    font-size: 36px;
-    color: #C30027;
-    text-shadow: 1px 0px white, 0px 1px white, -1px 0px white, 0px -1px white,
-    1px 1px white, -1px 1px white, 1px -1px white, -1px -1px white, 0 0 12px black;
-
-}
-
-.content h2 {
-    line-height: 5px;
-}
-
-.content h4 {
-    line-height: 20px;
-    font-size: 18px;
-    color: #C30027;
-}
-
-.content h3 {
-    text-align: center;
-    font-size: 24px;
-
-}
-
-#goBack {
-    position: absolute;
+.categMenu {
     display: block;
-    top: 340px;
-    width: 25px;
-    margin-left:52px;
+    float: left;
+    width: 320px;
+    padding-top: 76px;
 }
 
-#backText {
+#categ {
+    border-collapse: collapse;
+}
+
+#title1 {
+    font-family: "微軟正黑體";
+    font-size: 28px;
+    font-weight: 600;
+    color: white;
+    padding: 6px 19px;
+    text-shadow: 0 0 6px black;
+    border-bottom: 2px solid #196DB4;
+    background-color: #196DB4;
+}
+
+#annotation1 {
     font-family: "微軟正黑體";
     font-size: 22px;
     font-weight: 600;
-    color: #5A0087;
-    position: absolute;
-    display: block;
-    top: 313px;
-    margin-left:87px;
+    text-shadow: 1px 0px white, 0px 1px white, -1px 0px white, 0px -1px white,
+    1px 1px white, -1px 1px white, 1px -1px white, -1px -1px white, 0 0 8px black;
+    padding: 0 12px 3px;
+    vertical-align: bottom;
+    border-bottom: 2px solid #196DB4;
+    color:#005DAC;
+}
+
+#blank1 {
+    height: 4px;
+    border-bottom: 1px solid #7FAED5;
 
 }
 
-.content table {
-    display: inline-block;
-    text-align: left;
-    margin: 30px 0 0 0 ;
+#category1 {
+    list-style: none;
+    width: 310px;
+    font-family: "微軟正黑體";
     font-size: 22px;
     font-weight: 600;
-    color: #005A87;
+    color: #005DAC;
+    padding: 8px 0;
+    text-align: center;
+    margin-top: 10px;
 }
 
-.content table td {
-    width: 555px;
-    padding: 0 45px;
-    vertical-align: top;
+#category1 li {
+    padding: 8px 0;
+    line-height: 28px;
+    cursor: pointer;
 }
 
-#mark {
-    color: #C30027;
+#option1 {
+    padding: 6px 10px;
+
 }
 
-#background {
+#option1:hover, #subOption1:hover {
+    background-color: rgba(0,93,172, .2);
+}
+
+#title2 {
+    font-family: "微軟正黑體";
+    font-size: 28px;
+    font-weight: 600;
+    color: white;
+    padding: 6px 19px;
+    text-shadow: 0 0 6px black;
+    border-bottom: 2px solid #199393;
+    background-color: #199393;
+}
+
+#annotation2 {
+    font-family: "微軟正黑體";
+    font-size: 22px;
+    font-weight: 600;
+    text-shadow: 1px 0px white, 0px 1px white, -1px 0px white, 0px -1px white,
+    1px 1px white, -1px 1px white, 1px -1px white, -1px -1px white, 0 0 8px black;
+    padding: 0 24px 3px;
+    vertical-align: bottom;
+    border-bottom: 2px solid #199393;
+    color:#008787;
+}
+
+#blank2 {
+    height: 4px;
+    border-bottom: 1px solid #7FC3C3;
+
+}
+
+#category2 {
+    list-style: none;
+    width: 310px;
+    font-family: "微軟正黑體";
+    font-size: 22px;
+    font-weight: 600;
+    color: #008787;
+    padding: 8px 0;
+    text-align: center;
+    margin-top: 10px;
+}
+
+#category2 li {
+    padding: 8px 0;
+    line-height: 28px;
+    cursor: pointer;
+}
+
+#option2 {
+    padding: 6px 10px;
+}
+
+#option2:hover, #subOption2:hover {
+    background-color: rgba(0,135,135, .2);
+}
+
+.item {
+    margin-left: 400px;
+    height: 555px;
+    overflow: hidden;
+    margin-top: -7px;
+}
+
+.root {
+    font-family: "微軟正黑體";
+    font-size: 18px;
+    font-weight: 600;
+    text-indent: 130px;
+    margin-bottom: 30px;
+    color: black;
+}
+
+.root:hover {
+    color: #808080;
+}
+
+#pdBrowser {
+    list-style-type: none;
+    margin: 5px 0;
+}
+
+#pdBrowser li {
+    display: none;
+    padding: 50px 10px 0px;
+    line-height: 67px;
+    opacity: 0;
+}
+
+#pdBrowser li img {
+    border: 2px solid #C0C0C0;
+}
+
+#pdBrowser li img:hover {
+    box-shadow: 0 0 10px black;
+}
+
+
+#tag1, #tag2, #tag3, #tag4, #tag5, #tag6, #tag7, #tag8, #tag9
+, #tag10, #tag11, #tag12, #tag13, #tag14, #tag15, #tag16, #tag17, #tag18 {
+    margin: -84px 0 0 2px ;
+    position: absolute;
+    line-height: 20px;
+    display: inline-block;
+    padding: 8px 15px;
+    width: 220px;
+    height: 60px;
+    background-color: rgba(0,0,0,.5);
+    color: white;
+    font-family: "微軟正黑體";
+    font-size: 14px;
+    font-weight: 600;
+    visibility: hidden;
+    opacity: 0;
+}
+
+#more {
+    display: block;
+    float: right;
+    text-align: center;
+    font-family: "Arial";
+    color: white;
+    font-size: 26px;
+    font-weight: 600;
+    text-shadow: 0 0 6px black;
+    border: 2px solid white;
+    outline: 10px solid #C0C0C0;
+    padding: 5px 0;
+    background-color: #C0C0C0;
+    width: 350px;
+    margin: 40px 275px 40px 0;
+}
+
+#more:hover {
+    cursor: pointer;
+}
+
+.subCateg1, .subCateg2 {
     text-align: center;
     position: absolute;
+    list-style-type: none;
+    font-family: "微軟正黑體";
+    font-size: 22px;
+    line-height: 30px;
     z-index: -1;
-    overflow: hidden;
-
-    top: 40px;
-    height: 830px;
-    margin-left: -30px;
+    opacity: 0;
+    cursor: pointer;
 }
 
-#bgNotice {
-    width: 1350px;
+.subCateg1 {
+    margin-left: 180px;
+    width: 150px;
+    color: #500DAC;
+}
+
+#sub1-2 {
+    margin-top: -330px;
+}
+
+#sub1-5 {
+    margin-top: -200px;
+}
+
+#sub1-6 {
+    margin-top: -155px;
+}
+
+#sub1-8 {
+    margin-top: -67px;
+}
+
+.subCateg2 {
+    margin-left: 180px;
+    width: 150px;
+    color: #008787;
+}
+
+
+#sub2-1 {
+    margin-top: -198px;
+}
+
+#sub2-2 {
+    margin-top: -155px;
 }
