--- a/style.css
+++ b/style.css
@@ -111,7 +111,6 @@ header{
     margin: 0 auto;
     padding: 15px 15px 0 15px;
 
-
 }
 
 #sidenav a {
@@ -119,6 +118,7 @@ header{
     display: block;
     text-decoration: none;
     color: white;
+
 }
 
 #sidenav li:hover {
@@ -126,6 +126,7 @@ header{
     background-color: #005A87;
     cursor: pointer;
 }
+
 
 #sidenav ul li img {
     height: 28px;
@@ -215,7 +216,7 @@ header nav a {
 
    text-align: center;
    magin: 0 auto;
-   left: 0;
+   left: 0px;
    top: 0;
    height: 85px;
 
@@ -289,221 +290,259 @@ body {
 }
 
 .content {
-
-    text-align: center;
-    padding: 170px 0 0 0;
+    text-align: left;
+    padding: 230px 0 0 0;
     margin: 0 auto;
     font-family: "微軟正黑體";
+}
+
+.categMenu {
+    display: block;
+    float: left;
+    width: 320px;
+    padding-top: 76px;
+}
+
+#categ {
+    border-collapse: collapse;
+}
+
+#title1 {
+    font-family: "微軟正黑體";
+    font-size: 28px;
+    font-weight: 600;
+    color: white;
+    padding: 6px 19px;
+    text-shadow: 0 0 6px black;
+    border-bottom: 2px solid #005DAC;
+    background-color: #005DAC;
+}
+
+#annotation1 {
+    font-family: "微軟正黑體";
+    font-size: 22px;
+    font-weight: 600;
+    text-shadow: 1px 0px white, 0px 1px white, -1px 0px white, 0px -1px white,
+    1px 1px white, -1px 1px white, 1px -1px white, -1px -1px white, 0 0 8px black;
+    padding: 0 12px 3px;
+    vertical-align: bottom;
+    border-bottom: 2px solid #005DAC;
+    color:#005DAC;
+}
+
+#blank1 {
+    height: 4px;
+    border-bottom: 1px solid #7FAED5;
 
 }
 
-/*----------news slider----------*/
-
-.news {
-
-    width: 100%;
+#category1 {
+    list-style: none;
+    width: 310px;
+    font-family: "微軟正黑體";
+    font-size: 22px;
+    font-weight: 600;
+    color: #005DAC;
+    padding: 8px 0;
     text-align: center;
-    height: 450px;
-    position: relative;
+    margin-top: 10px;
 }
 
-.slider {
-
-    overflow: hidden;
-    top: 0;
-
-}
-
-.active-slide img {
-
-    width: 1040px;
-    padding: 0 ;
-    z-index: 0;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    -ms-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s;
-
-}
-
-.slide img {
-
-    display: none;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    -ms-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s;
-
-}
-
-.slide {
-
-  display: none;
-
-}
-
-.dot-nav {
-
-    height: 20%;
-    overflow: hidden;
-    z-index: 10;
-    position: relative;
-    bottom: 8vh;
-}
-
-.dot-nav li {
-
-    type: none;
-    display: inline-block;
-    padding: 0;
-
-}
-
-.dot-nav li img{
-
-    text-align: center;
-    padding: 0 10px 0 0;
-    width: 30%;
-
-}
-
-.dot:hover {
-
+#category1 li {
+    padding: 8px 0;
+    line-height: 28px;
     cursor: pointer;
+}
+
+#option1 {
+    padding: 6px 10px;
 
 }
 
+#option1:hover, #subOption1:hover {
+    background-color: rgba(0,93,172, .2);
+}
 
-/*--------products slider--------*/
+#title2 {
+    font-family: "微軟正黑體";
+    font-size: 28px;
+    font-weight: 600;
+    color: white;
+    padding: 6px 19px;
+    text-shadow: 0 0 6px black;
+    border-bottom: 2px solid #008787;
+    background-color: #008787;
+}
 
-.products {
-  position: relative;
-  text-align: center;
-  margin: 0 auto;
-  padding: 0;
-  }
+#annotation2 {
+    font-family: "微軟正黑體";
+    font-size: 22px;
+    font-weight: 600;
+    text-shadow: 1px 0px white, 0px 1px white, -1px 0px white, 0px -1px white,
+    1px 1px white, -1px 1px white, 1px -1px white, -1px -1px white, 0 0 8px black;
+    padding: 0 24px 3px;
+    vertical-align: bottom;
+    border-bottom: 2px solid #199393;
+    color:#008787;
+}
 
-.banner h2 {
-  font-family: "微軟正黑體";
-  font-size: 36px;
-  color: gray;
-  font-weight: 300;
+#blank2 {
+    height: 4px;
+    border-bottom: 1px solid #7FC3C3;
 
 }
 
-.banner h2 img {
-  vertical-align: middle;
-  display: inline-block;
-  padding: 0 10px;
+#category2 {
+    list-style: none;
+    width: 310px;
+    font-family: "微軟正黑體";
+    font-size: 22px;
+    font-weight: 600;
+    color: #008787;
+    padding: 8px 0;
+    text-align: center;
+    margin-top: 10px;
 }
 
-#newpd {
-  display: inline;
-  vertical-align: bottom;
-  font-size: 36px;
-  color: black;
-  font-family: "微軟正黑體";
-  font-weight: 600;
-  text-shadow: 1px 0px white, 0px 1px white, -1px 0px white, 0px -1px white,
-  1px 1px white, -1px 1px white, 1px -1px white, -1px -1px white, 0 0 10px black;
-
-
+#category2 li {
+    padding: 8px 0;
+    line-height: 28px;
+    cursor: pointer;
 }
 
-#pdSlider {
-  position: relative;
-  overflow: hidden;
-  margin: 0 auto;
-  padding: 0;
+#option2 {
+    padding: 6px 10px;
 }
 
-#pdSlider ul.pd {
-  position: absolute;
-  z-index: 5;
-  margin: 0 auto;
-  padding: 0;
-  list-style: none;
-  left: 20px;
-  top: 0;
+#option2:hover, #subOption2:hover {
+    background-color: rgba(0,135,135, .2);
 }
 
-#pdSlider ul.pd li {
-    position: relative;
-    display: inline-block;
-    margin: 0 38px;
-    width: 260px;
-    height: 500px;
-    line-height: 600px;
-    left: 0;
+.item {
+    margin-left: 400px;
+    height: 555px;
+    overflow: hidden;
+    margin-top: -7px;
 }
 
-#pdTag {
-  position: relative;
-  overflow: hidden;
+.root {
+    font-family: "微軟正黑體";
+    font-size: 18px;
+    font-weight: 600;
+    text-indent: 130px;
+    margin-bottom: 30px;
+    color: black;
 }
 
-#pdSlider ul.tag {
-  left: 20px;
-  margin: 0 auto;
-  padding: 0;
-  z-index: 10;
-  position: absolute;
-  top: 240px;
-  list-style: none;
-  text-align: center;
+.root:hover {
+    color: #808080;
 }
 
-#pdSlider ul.tag li {
-    visibility: hidden;
+#pdBrowser {
+    list-style-type: none;
+    margin: 5px 0;
+}
+
+#pdBrowser li {
+    display: none;
+    padding: 50px 10px 0px;
+    line-height: 67px;
     opacity: 0;
-    background-color: rgba(33, 33, 33, .8);
+}
+
+#pdBrowser li img {
+    border: 2px solid #C0C0C0;
+}
+
+#pdBrowser li img:hover {
+    box-shadow: 0 0 10px black;
+}
+
+
+#tag1, #tag2, #tag3, #tag4, #tag5, #tag6, #tag7, #tag8, #tag9
+, #tag10, #tag11, #tag12, #tag13, #tag14, #tag15, #tag16, #tag17, #tag18 {
+    margin: -84px 0 0 2px ;
+    position: absolute;
+    line-height: 20px;
+    display: inline-block;
+    padding: 8px 15px;
+    width: 220px;
+    height: 60px;
+    background-color: rgba(0,0,0,.5);
+    color: white;
     font-family: "微軟正黑體";
     font-size: 14px;
+    font-weight: 600;
+    visibility: hidden;
+    opacity: 0;
+}
+
+#more {
+    display: block;
+    float: right;
+    text-align: center;
+    font-family: "Arial";
     color: white;
-    position: relative;
-    display: inline-block;
-    margin: 60px 38px;
-    padding: 5px 10px ;
-    height: 55px;
-    line-height: 25px;
-    vertical-align: middle;
-    width: 240px;
-    text-align: left;
-
+    font-size: 26px;
+    font-weight: 600;
+    text-shadow: 0 0 6px black;
+    border: 2px solid white;
+    outline: 10px solid #C0C0C0;
+    padding: 5px 0;
+    background-color: #C0C0C0;
+    width: 350px;
+    margin: 40px 275px 40px 0;
 }
 
-.pdLeft {
-  position: absolute;
-  left: 0px;
-  z-index: 20;
-  padding-top: 150px;
+#more:hover {
+    cursor: pointer;
 }
 
-.pdRight {
-  position: absolute;
-  right: 0px;
-  z-index: 20;
-  padding-top: 150px;
+.subCateg1, .subCateg2 {
+    text-align: center;
+    position: absolute;
+    list-style-type: none;
+    font-family: "微軟正黑體";
+    font-size: 22px;
+    line-height: 30px;
+    z-index: -1;
+    opacity: 0;
+    cursor: pointer;
 }
 
-#pdLeft, #pdRight {
-
-  width: 45px;
-  cursor: pointer;
-
+.subCateg1 {
+    margin-left: 150px;
+    width: 150px;
+    color: #005DAC;
 }
 
-#pd1, #pd2, #pd3, #pd4, #pd5{
-
-    margin: 0 auto;
-    width: 260px;
-
+#sub1-2 {
+    margin-top: -330px;
 }
 
-#pd1:hover , #pd2:hover , #pd3:hover, #pd4:hover, #pd5:hover {
+#sub1-5 {
+    margin-top: -200px;
+}
 
-    box-shadow: 0px 0px 60px rgb(93, 137, 137);
+#sub1-6 {
+    margin-top: -155px;
+}
 
+#sub1-8 {
+    margin-top: -67px;
+}
+
+.subCateg2 {
+    margin-left: 150px;
+    width: 150px;
+    color: #008787;
+}
+
+
+#sub2-1 {
+    margin-top: -198px;
+}
+
+#sub2-2 {
+    margin-top: -155px;
 }
