--- a/merchandise/p1/style.css
+++ b/merchandise/p1/style.css
@@ -483,10 +483,10 @@ body {
 #tabs {
    list-style-type: none;
    font-family: "微軟正黑體";
-   font-size: 26px;
+   font-size: 24px;
    font-weight: 600;
    color: black;
-   margin-left: -604px;
+   margin-left: -632px;
    margin-bottom: 0;
    cursor: pointer;
 }
@@ -532,4 +532,62 @@ body {
 
 #notice {
    display: none;
+}
+
+#QA {
+   display: none;
+   text-align: left;
+   font-size: 18px;
+   font-family: "微軟正黑體";
+
+}
+
+#QAalert {
+    font-family: "微軟正黑體";
+    font-size: 22px;
+    color: #C30027;
+    font-weight: 600;
+    text-align: center;
+    margin: 0 0 20px 0;
+}
+
+.Qs {
+    background-color: rgba(0,90,135, .2);
+    margin: 0 -30px;
+    padding: 15px 30px;
+}
+
+.As {
+    margin: 0 -30px;
+    padding: 15px 30px;
+}
+
+.keyinQ {
+    width: 1050px;
+    height: 300px;
+    background-color: #D0D0D0;
+    margin: -15px -30px;
+    padding: 15px 30px;
+    line-height: 32px;
+}
+
+#comment {
+    font-family: "微軟正黑體";
+    font-size: 18px;
+    width: 1050px;
+    height: 120px;
+    overflow: scroll;
+
+
+
+}
+
+#submit {
+    font-family: "微軟正黑體";
+    font-size: 22px;
+    color: #C30027;
+}
+
+#formName, #formMail {
+
 }
