--- a/merchandise/p1/style.css
+++ b/merchandise/p1/style.css
@@ -566,8 +566,8 @@ body {
     width: 1050px;
     height: 360px;
     background-color: #D0D0D0;
-    margin: -15px -30px;
-    padding: 15px 30px;
+    margin: -15px -30px 0;
+    padding: 15px 30px ;
     line-height: 32px;
 }
 
@@ -593,5 +593,17 @@ body {
     font-size: 18px;
     padding: 5px 20px;
     margin: 15px;
+
+}
+
+#formName, #formMail {
+    border: none;
+    height: 20px;
+    vertical-align: middle;
+}
+
+textarea {
+    resize: none;
+    border: none;
 
 }
